fix layout issue

--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -50,6 +50,14 @@
   background: #ffffff;
   min-height: 360px;
 }
+.page_404{
+  text-align: center;
+  font-size: 50px;
+  i{
+    margin: 20px auto;
+    font-size: 100px;
+  }
+}
 .footer {
   text-align: center;
 }
