--- a/src/pages/resume/resume.less
+++ b/src/pages/resume/resume.less
@@ -93,6 +93,13 @@
         }
     }
 }
+.calendar{
+    width: 100%;
+    max-width: 300px;
+    margin: 50px auto;
+    border: 1px solid #dedede;
+    border-radius: 5px;
+}
 .tag_wrapper{
     margin: 10px auto;
 }
